Mover Dto's de service para controller